--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :rows =>6%>
   </div>
   <div class="field">
     <%= f.label :semester %><br />
