--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -27,4 +27,4 @@
 
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
-<%= link_to 'Back', courses_path %>
+<%= link_to 'Back', professor_path(@course.professor_id)%>
