--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,9 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Department Name:</b>
   <%= @department.name %>
 </p>
+
+<b>Professors</b>
+<div id="professors">
+    <%= render :partial =>@department.professors%>
+</div>
+
+<%= form_for [@department, Professor.new], do |f| %>
+    <p>
+    <%= f.label :name, "New Professor" %><br />
+    <%= f.text_field :name %>
+    </p>
+    <p><%= f.submit "Add Professor" %></p>
+<% end %>
+
+
 
 
 <%= link_to 'Edit', edit_department_path(@department) %> |
