--- a/app/views/evaluations/_form.html.erb
+++ b/app/views/evaluations/_form.html.erb
@@ -12,21 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :q1 %><br />
-    <%= f.number_field :q1 %>
+    <%= f.label :name %><br />
+    <%= f.number_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :q2 %><br />
-    <%= f.number_field :q2 %>
-  </div>
-  <div class="field">
-    <%= f.label :q3 %><br />
-    <%= f.number_field :q3 %>
-  </div>
-  <div class="field">
-    <%= f.label :q4 %><br />
-    <%= f.text_field :q4 %>
-  </div>
+
+  <%= f.fields_for :questions do |builder| %>
+    <%= render 'question_fields', f: builder %>
+  <% end %>
+  <%= link_to_add_fields "Add Question", f, :questions %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
