--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -1,29 +1,10 @@
-<h1>Listing evaluations</h1>
-
-<table>
-  <tr>
-    <th>Q1</th>
-    <th>Q2</th>
-    <th>Q3</th>
-    <th>Q4</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h1>Evaluations</h1>
 
 <% @evaluations.each do |evaluation| %>
-  <tr>
-    <td><%= evaluation.q1 %></td>
-    <td><%= evaluation.q2 %></td>
-    <td><%= evaluation.q3 %></td>
-    <td><%= evaluation.q4 %></td>
-    <td><%= link_to 'Show', evaluation %></td>
-    <td><%= link_to 'Edit', edit_evaluation_path(evaluation) %></td>
-    <td><%= link_to 'Destroy', evaluation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <div class="article">
+    <h2><%= link_to evaluation.name, evaluation %></h2>
+    <%= pluralize(evaluation.questions.size, "Question") %>
+  </div>
 <% end %>
-</table>
 
-<br />
-
-<%= link_to 'New Evaluation', new_evaluation_path %>
+<p><%= link_to 'New Evaluation', new_evaluation_path %></p>
