--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -8,7 +8,7 @@
     <th></th>
   </tr>
 
-<% @professors.each do |professor| %>
+<% @department.professors.each do |professor| %>
   <tr>
     <td><%= professor.name %></td>
     <td><%= link_to 'Show', professor %></td>
