--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -7,16 +7,20 @@
 
 <b>Professors</b>
 <div id="professors">
-    <%= render :partial =>@department.professors%>
+    <%= render :partial => @department.professors %>
 </div>
-
+<br/>
+<b>Courses</b>
+<div id="courses">
+    <%= render :partial => @department.courses %>
+</div>
+<br/>
 <% if admin_signed_in? %>
-  <%= form_for Professor.new do |f| %>
+  <%= form_for [@department, Professor.new] do |f| %>
       <p>
       <%= f.label :name, "New Professor" %><br />
       <%= f.text_field :name %>
-      </p>
-      <%= f.hidden_field :department_id, value: @department.id %>
+      </p>	
       <p><%= f.submit "Add Professor" %></p>
   <% end %>
 <% end %>
