--- a/app/views/professors/_professor.html.erb
+++ b/app/views/professors/_professor.html.erb
@@ -1,3 +1,3 @@
-<%= div_for professor do%>
-    <%=link_to  h(professor.name),department_professor_path(professor.id)%></p>
+<%= div_for professor do %>
+    <%= link_to  professor.name, department_professor_path(professor.department,professor) %><br/>
 <% end %>
