--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
+<% if alert %>
+  <div class="alert"><%= alert %></div><br/>
+<% elsif notice %>
+  <div id="notice"><%= notice %></div><br/>
+<% end %>
+
 <h1>Welcome to UNM RateMyProfessor</h1>
 <p></p>
