--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -5,19 +5,23 @@
     <th>Departments</th>
     <th></th>
     <th></th>
-    <th></th>
   </tr>
 
 <% @departments.each do |department| %>
   <tr>
     <td><%= link_to department.name, department%></td>
-    <td><%= link_to 'Show', department %></td>
-    <td><%= link_to 'Edit', edit_department_path(department) %></td>
-    <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% if admin_signed_in? %>
+      <td><%= link_to 'Edit', edit_department_path(department) %></td>
+      <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% else %>
+      <td><td/>
+      <td><td/>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
-
-<%= link_to 'New Department', new_department_path %>
+<% if admin_signed_in? %>
+  <%= link_to 'New Department', new_department_path %>
+<% end %>
