Show the department's short name on the department list page. Allow the department's short name to be edited.

--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :shortname %><br />
+    <%= f.text_field :shortname %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
