Fix course show view so that it works.  The stats had to be removed for now, since the evaluation schema has changed considerably. From the course show page, there is now a list of all evaluations for the course and the ability to create new evaluations.
Also add response_set and response tables to the database to store
responses to an evaluation.  This is not implented yet though.

--- a/app/views/evaluations/_evaluation.html.erb
+++ b/app/views/evaluations/_evaluation.html.erb
@@ -1,9 +1,5 @@
 <%= div_for evaluation do %>
     <p>
-    <%=link_to h(evaluation.id), evaluation_path(evaluation.id) %>
-    Q1:<%= h(evaluation.q1) %>
-    Q2:<%= h(evaluation.q2) %>
-    Q3:<%= h(evaluation.q3) %>
-    Q4:<%= h(evaluation.q4) %>
+    <%=link_to h(evaluation.name), evaluation_path(evaluation.id) %>
     </p>
 <% end %>
