--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -7,4 +7,4 @@
   </div>
 <% end %>
 
-<p><%= link_to 'New Evaluation', new_evaluation_path %></p>
+<p><%= link_to 'New Evaluation', new_evaluation_path(course_id: 1) %></p>
