--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -25,58 +25,14 @@
   <%= @course.year %>
 </p>
 
-<b>Statistics</b>
-<div id = "statistics">
-    <div class="field">
-    Total number of evaluations:
-    #<%= Evaluation.where("course_id = ?", @course.id).count %>  
-  </div>
-</div>
-
-<table>
-  <tr>
-    <th>Q1</th>
-    <th>Q2</th>
-    <th>Q3</th>
-    <th>Q4</th>  
-  </tr>
-
-<tr>
-    <td><%= "%.3f " %Evaluation.where("course_id = ?", @course.id).average(:q1)  %></td>
-    <td><%= "%.3f " %Evaluation.where("course_id = ?", @course.id).average(:q2)  %></td>
-    <td><%= "%.3f " %Evaluation.where("course_id = ?", @course.id).average(:q3) %></td>
-    <td><%= "%.3f " %Evaluation.where("course_id = ?", @course.id).average(:q4) %></td>
-  </tr>
-</table>
-
 <b><%= link_to "view Detail",course_evaluations_path(@course.id) %></b></br>
 
-<!--<b>Evaluations</b>
+<b>Evaluations</b>
 <div id = "evaluations">
     <%= render :partial => @course.evaluations %>
-</div>-->
+</div>
 
-
-<b>Add evaluation for this Course: </b>
-<%= form_for [@course, Evaluation.new] do |f| %>
- <div class="field">
-    <%= f.label :q1 %><br />
-    <%= f.number_field :q1 %>
-  </div>
-  <div class="field">
-    <%= f.label :q2 %><br />
-    <%= f.number_field :q2 %>
-  </div>
-  <div class="field">
-    <%= f.label :q3 %><br />
-    <%= f.number_field :q3 %>
-  </div>
-  <div class="field">
-    <%= f.label :q4 %><br />
-    <%= f.text_field :q4 %>
-  </div>
-   <p><%= f.submit "Add Evaluation" %></p>
- <%end%>
+<p><%= link_to 'New Evaluation', new_evaluation_path(:course_id => @course.id) %></p>
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', professor_path(@course.professor_id)%>
