--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Listing professors</h1>
 
 <table>
   <tr>
@@ -7,45 +6,46 @@
     <th></th>
     <th></th>
   </tr>
-<%if params[:search]%>
+
+<%@letter=params[:letter]%>
+<%@search=params[:search]%>
 
 
-<% @professors.each do |professor| %>
-	<%if params[:search] %>
-		<%next if !professor.name.downcase.index(params[:search].downcase)%>
-	<%else%>
-		<%next if professor.name[0].downcase!=@letter%>
-	<%end%>
-  <tr>
-    <td><%= professor.name %></td>
-    <td><%= link_to 'Show', professor %></td>
-    <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
-    <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%if(@search||@letter)%>
+<script type="text/javaScript">
+alert("hello");
+</script>
 
-</table>
-
-<br />
-
-
-<%= link_to 'New Professor', new_professor_path %>
-
-
+	<% @professors.each do |professor| %>
+		<%if params[:search] %>
+			<%next if !professor.name.downcase.index(params[:search].downcase)%>
+		<%else%>
+			<%next if professor.name[0].downcase!=@letter%>
+		<%end%>
+	  <tr>
+	    <td><%= professor.name %></td>
+	    <td><%= link_to 'Show', professor %></td>
+	    <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
+	    <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	  </tr>
+	<% end %>
+	</table>
+	<br />
+	<%= link_to 'New Professor', new_professor_path %>
 
 <%else%>
-<% @department.professors.each do |professor| %>
-  <tr>
-    <td><%= professor.name %></td>
-    <td><%= link_to 'Show', professor %></td>
-    <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
-    <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
 
-<br />
+	<% @department.professors.each do |professor| %>
+	  <tr>
+	    <td><%= professor.name %></td>
+	    <td><%= link_to 'Show', professor %></td>
+	    <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
+	    <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	  </tr>
+	<% end %>
+	</table>
 
-<%= link_to 'New Professor', new_professor_path %>
+	<br />
 
+	<%= link_to 'New Professor', new_professor_path %>
 <%end%>
