--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,24 @@
  *= require_self
  *= require_tree .
  */
+//Styles for links
+.alpha_link{top-margin:50px;}
+  a{
+    padding: 10px;
+    font-size: medium;
+    color:#696969;
+  }
+//Styles for the table that each pages heading resides in
+h1{
+float:left;
+text-decoration:underline;
+}
+.header_table{
+margin-top:30px;
+margin-left:80px;
+}
 
+//Styles for the table that searches
   .table_search {
     float: right;
     border-collapse: collapse;
@@ -20,8 +37,6 @@
     margin-right:80px;
     td{font-size:large;}
   }
-
-
   .search_background{
     text-align:center;
     background-color:#696969;
@@ -32,13 +47,13 @@
     
   }
 
-
+//Style for the search pulldown
   .pulldown1{    
     font-size: 16px;
     font-family: Arial;
     border-radius:6px;
     width:130px;}
-
+//Styles for the search button
   .button{
     margin-bottom:9px;
     border-top: .5px solid #ffffff;
