--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,11 +17,13 @@
     padding: 10px;
     font-size: medium;
     color:#696969;
+
   }
 //Styles for the table that each pages heading resides in
 h1{
 float:left;
 text-decoration:underline;
+opacity:.7;
 }
 .header_table{
 margin-top:30px;
@@ -86,4 +88,6 @@ margin-left:80px;
     border-top-color:#c41633;
     background:#c41633;
   } 
+
+
 
