--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,17 +1,43 @@
 
+
+<!DOCTYPE html>
+<html>
+
 <table class="prof_name_department">
   <tr>
-	<td style="opacity:.8;background-color:#ffffff;"><h2 style='margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= @professor.name %></h2></td>
+	<td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= @professor.name %></h2></td>
   </tr>
   <tr>	
-	<td style="opacity:1;background-color:#fe4d4d;"><h2 style='font-size:medium;margin-left:30px;float:left;margin-top:0px;color:black; opacity:.8;'><b>Department:</b> <%= @professor.department.name %></h2></td>
+	<td style="opacity:1;background-color:#fe4d4d;"><h2 style='font-size:14pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:.8;'><b>Department:</b> <%= @professor.department.name %></h2></td>
   </tr>
-
+</table>
 
 <p id="notice"><%= notice %></p>
 
 <table class="table_courses">
-<tr><td style="color:black;font-size:large; padding-right:30px;padding-left:30px;padding-bottom:10px;padding-top:10px; "><b>Courses</b></td></tr>
+  <tr><td style="color:black;font-size:13.5pt;padding-right:30px;padding-left:30px;padding-bottom:10px;padding-top:10px; "><b>Courses</b></td></tr>
+  <tr><td style="font-size:13.5pt;padding-right:30px;padding-left:30px;">
+
+
+<!--dual selection box for term/year when showing professor courses-->
+<!--<script type="text/javaScript">
+	var d=new Date();
+	var month=d.getMonth();
+	var year=d.getFullYear();
+	var my_year=new Array();
+	var i=0;
+
+
+    document.write("<select style='width:135px;' class='term' name='term'  id='term'>");
+    if(month<=11&&month>=5){document.write("<option selected='selected'>Fall</option><option>Spring</option>");}
+    else{document.write("<option selected='selected'>Spring</option><option>Fall</option>");}
+    document.write("</select>")
+    
+    document.write("<select style='width:135px;' class='year' name='year'  id='year'></select></td></tr>");
+</script>-->
+
+</table>
+
 
 
 <!--This isn't working for me.... can't figure out why.... also sorry for all the inline css.. i'm tired..-->
@@ -19,7 +45,7 @@
 <div id = "courses">
     <%= render :partial => @professor.courses %>
 </div></tr></td>
-</table>
+
 <!---------->
 
 
