--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,7 +122,14 @@ if(!pathArray1[3]&&(pathArray1[1]=="departments"||pathArray1[1]=="professors")&&
 		{
 			document.write("style='opacity:.6;'");
 		}
-		document.write("href='"+pathArray1[1]+"?letter="+alphabet[i]+"'>"+alphabet[i]+"</a></td>");
+
+if(pathArray[2]&&!pathArray[3])
+{
+		document.write("href='"+pathArray1[2]+"?letter="+alphabet[i]+"'>"+alphabet[i]+"</a></td>");
+}
+else
+{		document.write("href='"+pathArray1[1]+"?letter="+alphabet[i]+"'>"+alphabet[i]+"</a></td>");
+}
 	}
 }
 </script>
