--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -17,7 +17,7 @@
 
 
 	<% @professors.each do |professor| %>
-  	    <%if @letter!="All"%>
+  	    <%if params[:letter]&&@letter!="All"%>
 		<%if params[:search] %>
 			<%next if !professor.name.downcase.index(params[:search].downcase)%>
 		<%else%>
