--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,7 +87,50 @@ margin-left:80px;
   .button:active{
     border-top-color:#c41633;
     background:#c41633;
-  } 
+  }
 
+.navbar-inner {
+    margin-bottom: 10px;
+}
 
+#search {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 30px;
+}
 
+#main {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    h1 {float:none; text-align: center;}
+}
+
+#footer {
+      width: 940px;
+      margin-top: 30px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 5px;
+      border-top: 1px solid #eaeaea;
+      color: #999;
+
+      a {color: #555;}  
+
+      a:hover {color: #EDD2C1;}
+
+      small {float: left;}
+
+      ul {
+          float: right;
+          list-style: none;
+      }
+
+      ul li {
+          float: left;
+          margin-left: 10px;
+      }
+}
