--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,10 @@
-<footer class="footer">
-<small>
+<div id="footer">
+  <small>
     <a href="http://railstutorial.org/">Rails Tutorial</a>
-</small>
-<nav>
-<ul>
+  </small>
+  <ul>
     <li><%= link_to "About",   '#' %></li>
     <li><%= link_to "Contact", '#' %></li>
     <li><a href="http://news.railstutorial.org/">News</a></li>
-</ul>
-</nav>
-</footer>
+  </ul>
+</div>
