--- a/app/views/evaluations/_evaluation.html.erb
+++ b/app/views/evaluations/_evaluation.html.erb
@@ -1,5 +1,8 @@
 <%= div_for evaluation do %>
     <p>
     <%=link_to h(evaluation.name), evaluation_path(evaluation.id) %>
+      <ul>
+        <%= link_to "Take Evaluation", new_response_set_path(evaluation_id: evaluation.id) %>
+      </ul>
     </p>
 <% end %>
