--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -12,7 +12,6 @@
 
 
 
-
 <table class="table_dept">
   <tr>
 	<td class="title">Departments</td>
@@ -21,9 +20,9 @@
 <%@flag=0;%>
   <% @departments.each do |department| %>
 
-    <%if params[:letter]&&@letter!="All"%>
+    <%if (params[:search]||params[:letter])&&@letter!="All"%>
 	<%if @search %>
-		<%next if !department.name.downcase.index(@search.downcase)%>
+		<%next if (!department.name.downcase.index(@search.downcase)&&!department.shortname.downcase.index(@search.downcase))%>
 	<%else%>
 		<%next if department.name[0].upcase!=@letter%>
 	<%end%>
@@ -34,6 +33,7 @@
 
 	<%@flag=1%>
 	<%= link_to department.name, department%></td>
+
     	<% if admin_signed_in? %>
 
     <td><%= link_to 'Edit', edit_department_path(department) %></td>
