--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -13,12 +13,11 @@
 <%@search=params[:search]%>
 
 
-<%if(@search||@letter)%>
 
 
 	<% @professors.each do |professor| %>
-  	    <%if params[:letter]&&@letter!="All"%>
-		<%if params[:search] %>
+  	    <%if (params[:search]||params[:letter])&&@letter!="All" %>
+		<%if params[:search]%>
 			<%next if !professor.name.downcase.index(params[:search].downcase)%>
 		<%else%>
 			<%next if professor.name[0].upcase!=@letter%>
@@ -39,5 +38,5 @@
 		<%= link_to 'New Professor', new_professor_path %>
 	<%end%>
 
-<%end%>
+
 
