Combined professor pages/added course listing css/index by last name

--- a/app/assets/stylesheets/professors.css.scss
+++ b/app/assets/stylesheets/professors.css.scss
@@ -57,6 +57,24 @@ border-radius:7px;
 background-color:#b5b5b5; 
 margin-left:70px;}
 
+.table_course_listing{
+opacity:.8;
+width:700px; 
+margin-top:15px; 
+border-radius:7px; 
+background-color:#b5b5b5; 
+margin-left:70px;}
+
+.table_course_cells{
+padding-right:30px;
+padding-left:30px;
+padding-bottom:10px;
+padding-top:15px;
+font-family:arial;
+font-size:medium;
+
+a{padding-left:0;font-family:arial;font-size:medium;margin-left:0;}}
+
 
   .list_line_even {
 
