Added professor only edits own page

--- a/app/views/evaluations/_evaluation.html.erb
+++ b/app/views/evaluations/_evaluation.html.erb
@@ -1,6 +1,6 @@
 <%= div_for evaluation do %>
     <p>
-    <%=link_to h(evaluation.name), evaluation_path(evaluation.id) %>
+      <%=link_to h(evaluation.name), evaluation_path(evaluation.id), class: "evaluation" %>
       <ul>
         <%= link_to "Take Evaluation", new_response_set_path(evaluation_id: evaluation.id) %>
       </ul>
