--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,6 +1,4 @@
-<% if alert %>
-  <div class="alert"><%= alert %></div><br/>
-<% elsif notice %>
+<% if notice %>
   <div id="notice"><%= notice %></div><br/>
 <% end %>
 
