--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,7 @@
+<% if notice %>
+  <div id="notice"><%= notice %></div><br/>
+<% end %>
+
 <p id="notice"><%= notice %></p>
 <h1>Course information</h1>
 <br/>
@@ -35,5 +39,7 @@
 
 <p><%= link_to 'New Evaluation', new_evaluation_path(:course_id => @course.id) %></p>
 
+<% if admin_signed_in? or instructor_signed_in? %>
 <%= link_to 'Edit', edit_course_path(@course) %> |
+<% end %>
 <%= link_to 'Back', professor_path(@course.professor_id)%>
