--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,8 +1,3 @@
-
-
-<!DOCTYPE html>
-<html>
-
 <table class="prof_name_department">
   <tr>
 	<td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= @professor.name %></h2></td>
@@ -49,7 +44,7 @@
 <!---------->
 
 
-<% if admin_signed_in? || instructor_signed_in? %>
+<% if admin_signed_in? or @pageid == @userid %>
   <b>Add Courses for this professor: </b>
   <%= form_for [@professor, Course.new] do |f| %>
     <div class="field">
@@ -78,6 +73,10 @@
   <%= link_to 'Edit', edit_professor_path(@professor) %> |
 <%end%>
 <br \>
+<% if admin_signed_in? %>
+  <%= link_to 'Create account for this professor',
+        new_instructor_registration_path(professor_id: @professor) %> |
+<% end %>
 <br \>
 <%= link_to 'Back', department_path(@professor.department_id)%>
 <br \>
