--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -77,10 +77,10 @@ document.write("</select></td></tr>");
     <% if ProfessorEval.where("professor_id = ? ", @professor.id).count != 0 %>
     <table class="table_statistic_listing">
         <tr>
-            <th>q1</th>
-            <th>q2</th>
-            <th>q3</th>
-            <th>q4</th>  
+            <th>Q1</th>
+            <th>Q2</th>
+            <th>Q3</th>
+            <th>Q4</th>  
         </tr>
 
         <tr>
@@ -92,10 +92,11 @@ document.write("</select></td></tr>");
     </table>
     <% end %>
 
-    <b>add evaluation for this professor: </b> <br />
+    <br />
+    <b style="font-size:12pt;">Add evaluation for this professor: </b> <br />
     <%= form_for [@professor, ProfessorEval.new], do |f| %>
         <div class="field">
-            <%= f.label :q1, "is this professor handsome?" %>
+            <%= f.label :q1, "Q1: Is this professor handsome?" %>
             <%= f.radio_button :q1, 1 %> 1 
             <%= f.radio_button :q1, 2 %> 2 
             <%= f.radio_button :q1, 3 %> 3 
@@ -103,7 +104,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q1, 5 %> 5 
         </div>
         <div class="field">
-            <%= f.label :q2, "can you understand his english?" %>
+            <%= f.label :q2, "Q2: Can you understand his english?" %>
             <%= f.radio_button :q2, 1 %> 1 
             <%= f.radio_button :q2, 2 %> 2 
             <%= f.radio_button :q2, 3 %> 3 
@@ -111,7 +112,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q2, 5 %> 5 
         </div>
         <div class="field">
-            <%= f.label :q3, "do you think he/she is charming?" %>
+            <%= f.label :q3, "Q3: Do you think he/she is charming?" %>
             <%= f.radio_button :q3, 1 %> 1 
             <%= f.radio_button :q3, 2 %> 2 
             <%= f.radio_button :q3, 3 %> 3 
@@ -119,7 +120,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q3, 5 %> 5 
         </div>
         <div class="field">
-            <%= f.label :q4, "your overall rating to this professor" %>
+            <%= f.label :q4, "Q4: Your overall rating for this professor" %>
             <%= f.radio_button :q4, 1 %> 1 
             <%= f.radio_button :q4, 2 %> 2 
             <%= f.radio_button :q4, 3 %> 3 
