--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -20,7 +20,7 @@
     <td class="list_name">
 
 	<%@flag=1%>
-	<%= link_to department.name, controller:"/professors",department1:department%></td>
+	<%= link_to department.name, department_professors_path(department)%></td>
 <!--	<%= link_to department.name %></td>-->
 <!--<a href="/professors?department=<%=department.shortname%>"><%=department.name%></a>-->
 
