--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -11,7 +11,7 @@
 
   	    <%end%>
 
-	    <tr><td><%= link_to professor.name, professor %></td></tr>
+	    <tr><td><%= link_to professor.name, department_professor_path(@department) %></td></tr>
 	<%end%>
 </table>
 
