--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -123,7 +123,7 @@ document.write("</select></td></tr>");
 
     <% if admin_signed_in? || instructor_signed_in? %>
         <b>add courses for this professor: </b>
-        <%= form_for [@professor, course.new] do |f| %>
+        <%= form_for [@professor, Course.new] do |f| %>
             <div class="field">
                 <%= f.label :code, "course code"%><br />
                 <%= f.text_field :code %>
