--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,6 +1,6 @@
     <table class="prof_name_department">
         <tr>
-            <td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= @professor.name %></h2></td>
+            <td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= "#{@professor.name}, #{@professor.first_name}" %></h2></td>
         </tr>
         <tr>	
             <td style="opacity:1;background-color:#fe4d4d;"><h2 style='font-size:14pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:.8;'><b>Department:</b> <%=link_to @professor.department.name, department_professors_path(@professor.department_id) %></h2></td>
