Fixed form for professors

--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name %><br />
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
