--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -122,8 +122,9 @@ document.write("</select></td></tr>");
     <%end%>
 
     <% if admin_signed_in? || instructor_signed_in? %>
-        <b>add courses for this professor: </b>
-        <%= form_for [@professor, course.new] do |f| %>
+	<br /><br />
+        <h3>Add a course for this professor: </h3>
+        <%= form_for [@professor, Course.new] do |f| %>
             <div class="field">
                 <%= f.label :code, "course code"%><br />
                 <%= f.text_field :code %>
