--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,11 +9,11 @@
 
 <table align="center" class="tablelinks">
 
-<tr><td colspan="2"><h2>Find class by:</h2></td></tr>
+<tr><td colspan="2"><h2>Find class by:</h2><br/></td></tr>
 
 <tr>
 
-<td><input style="width:200px;" class="mybutton" onClick="parent.location='/departments'" type="button" value="Department"></td>
+<td><input style="width:200px;margin-right:50px;" class="mybutton" onClick="parent.location='/departments'" type="button" value="Department"></td>
 <td><input style="width:200px;" class="mybutton" onClick="parent.location='/professors'" type="button" value="Professors"></td></tr>
 
 <!--<tr><td><a href="/departments">Department</a></td><td><a href="/professors">Professor</a></td></tr>-->
