--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 <div class="navbar-inner">
     <div class="container">
-        <%= link_to "RateMyClass", departments_path, id: "logo" %>
+        <%= link_to "RateMyClass", root_path, id: "logo" %>
         <ul class="nav pull-right">
-            <li><%= link_to "Home",    root_path%></li>
-            <li><%= link_to "Help",    help_path%></li>
+            <li><%= link_to "Home", root_path%></li>
+            <li><%= link_to "Help", help_path%></li>
             <% if !admin_signed_in? and !instructor_signed_in? and !user_signed_in? %>
               <li><%= link_to "Sign in", login_path %></li>
             <% elsif admin_signed_in? %>
