Revised Evaluation Question
Revised and added evaluation questions

--- a/app/views/professor_evals/_form.html.erb
+++ b/app/views/professor_evals/_form.html.erb
@@ -27,6 +27,30 @@
     <%= f.label :q4 %><br />
     <%= f.number_field :q4 %>
   </div>
+    <div class="field">
+    <%= f.label :q5 %><br />
+    <%= f.number_field :q5 %>
+  </div>
+  <div class="field">
+    <%= f.label :q6 %><br />
+    <%= f.number_field :q6 %>
+  </div>
+  <div class="field">
+    <%= f.label :q7 %><br />
+    <%= f.number_field :q7 %>
+  </div>
+  <div class="field">
+    <%= f.label :q8 %><br />
+    <%= f.number_field :q8 %>
+  </div>
+    <div class="field">
+    <%= f.label :q9 %><br />
+    <%= f.number_field :q9 %>
+  </div>
+    <div class="field">
+    <%= f.label :q10 %><br />
+    <%= f.number_field :q10 %>
+  </div>
   <div class="field">
     <%= f.label :comment %><br />
     <%= f.text_field :comment %>
