--- a/app/views/professor_evals/index.html.erb
+++ b/app/views/professor_evals/index.html.erb
@@ -6,6 +6,12 @@
     <th>Q2</th>
     <th>Q3</th>
     <th>Q4</th>
+    <th>Q5</th>
+    <th>Q6</th>
+    <th>Q7</th>
+    <th>Q8</th>
+    <th>Q9</th>
+    <th>Q10</th>
     <th>Comment</th>
     <th></th>
     <th></th>
@@ -18,6 +24,12 @@
     <td><%= professor_eval.q2 %></td>
     <td><%= professor_eval.q3 %></td>
     <td><%= professor_eval.q4 %></td>
+    <td><%= professor_eval.q5 %></td>
+    <td><%= professor_eval.q6 %></td>
+    <td><%= professor_eval.q7 %></td>
+    <td><%= professor_eval.q8 %></td>
+    <td><%= professor_eval.q9 %></td>
+    <td><%= professor_eval.q10 %></td>
     <td><%= professor_eval.comment %></td>
     <td><%= link_to 'Show', professor_eval %></td>
     <td><%= link_to 'Edit', edit_professor_eval_path(professor_eval) %></td>
