--- a/app/views/professor_evals/show.html.erb
+++ b/app/views/professor_evals/show.html.erb
@@ -17,7 +17,42 @@
 
 <p>
   <b>Q4:</b>
-  <%= @professor_eval.q4 %>
+  <%= @professor_e<h1>New professor_eval</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', professor_evals_path %>
+val.q4 %>
+</p>
+
+<p>
+  <b>Q5:</b>
+  <%= @professor_eval.q5 %>
+</p>
+
+<p>
+  <b>Q6:</b>
+  <%= @professor_eval.q6 %>
+</p>
+
+<p>
+  <b>Q7:</b>
+  <%= @professor_eval.q7 %>
+</p>
+
+<p>
+  <b>Q8:</b>
+  <%= @professor_eval.q8 %>
+</p>
+
+<p>
+  <b>Q9:</b>
+  <%= @professor_eval.q9 %>
+</p>
+
+<p>
+  <b>Q10:</b>
+  <%= @professor_eval.q10 %>
 </p>
 
 <p>
