--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -70,6 +70,12 @@ document.write("</select></td></tr>");
             <th>Q2</th>
             <th>Q3</th>
             <th>Q4</th>
+            <th>Q5</th>
+            <th>Q6</th>
+            <th>Q7</th>
+            <th>Q8</th>
+            <th>Q9</th>
+            <th>Q10</th>
         </tr>
 
         <tr>
@@ -77,6 +83,12 @@ document.write("</select></td></tr>");
             <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q2) %></td>
             <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q3) %></td>
             <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q4) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q5) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q6) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q7) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q8) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q9) %></td>
+            <td><%= "%.2f" %ProfessorEval.where("professor_id = ?", @professor.id).average(:q10) %></td>        
         </tr>
     </table>
     <% end %>
@@ -86,7 +98,7 @@ document.write("</select></td></tr>");
     <b style="font-size:12pt;">Add evaluation for this professor: </b> <br />
     <%= form_for [@professor, ProfessorEval.new] do |f| %>
         <div class="field">
-            <%= f.label :q1, "Q1: Is this professor hot?" %>
+            <%= f.label :q1, "Q1: My instructor communicates ideas and concepts clearly" %>
             <%= f.radio_button :q1, 1 %> 1
             <%= f.radio_button :q1, 2 %> 2
             <%= f.radio_button :q1, 3 %> 3
@@ -94,7 +106,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q1, 5 %> 5
         </div>
         <div class="field">
-            <%= f.label :q2, "Q2: Can you understand his english?" %>
+            <%= f.label :q2, "Q2: My instructor demonstrates a thorough grasp of the course material" %>
             <%= f.radio_button :q2, 1 %> 1
             <%= f.radio_button :q2, 2 %> 2
             <%= f.radio_button :q2, 3 %> 3
@@ -102,7 +114,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q2, 5 %> 5
         </div>
         <div class="field">
-            <%= f.label :q3, "Q3: Do you think he/she is charming?" %>
+            <%= f.label :q3, "Q3: My instructor explains the material in an interesting manner?" %>
             <%= f.radio_button :q3, 1 %> 1
             <%= f.radio_button :q3, 2 %> 2
             <%= f.radio_button :q3, 3 %> 3
@@ -110,13 +122,61 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q3, 5 %> 5
         </div>
         <div class="field">
-            <%= f.label :q4, "Q4: Your overall rating for this professor" %>
+            <%= f.label :q4, "Q4: My instructor is well-organized" %>
             <%= f.radio_button :q4, 1 %> 1
             <%= f.radio_button :q4, 2 %> 2
             <%= f.radio_button :q4, 3 %> 3
             <%= f.radio_button :q4, 4 %> 4
             <%= f.radio_button :q4, 5 %> 5
         </div>
+        <div class="field">
+            <%= f.label :q5, "Q5: My instructor is accessible outside of class" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div>
+        <div class="field">
+            <%= f.label :q6, "Q6: My instructor encourages participation in class" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div>
+        <div class="field">
+            <%= f.label :q7, "Q7: The pace of the course is good" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div>
+        <div class="field">
+            <%= f.label :q8, "Q8: My instructor uses good examples in lecture" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div>
+        <div class="field">
+            <%= f.label :q9, "Q9: My instructor notices indications when students need help" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div>
+        <div class="field">
+            <%= f.label :q10, "Q10: The grading in the course was fair" %>
+            <%= f.radio_button :q4, 1 %> 1
+            <%= f.radio_button :q4, 2 %> 2
+            <%= f.radio_button :q4, 3 %> 3
+            <%= f.radio_button :q4, 4 %> 4
+            <%= f.radio_button :q4, 5 %> 5
+        </div> 
         <p><%= f.submit "add evaluation for this professor" %></p>
     
     <%end%>
