--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,3 +1,9 @@
+<!doctype html>
+
+
+
+
+
     <table class="prof_name_department">
         <tr>
             <td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= "#{@professor.name}, #{@professor.first_name}" %></h2></td>
