--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,9 +1,3 @@
-<!doctype html>
-
-
-
-
-
     <table class="prof_name_department">
         <tr>
             <td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= "#{@professor.name}, #{@professor.first_name}" %></h2></td>
@@ -187,7 +181,7 @@ document.write("</select></td></tr>");
     
     <%end%>
 
-    <% if admin_signed_in? || instructor_signed_in? %>
+    <% if admin_signed_in? || @userid == @pageid %>
 	<br /><br />
         <h3>Add a course for this professor: </h3>
         <%= form_for [@professor, Course.new] do |f| %>
